--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
-RewriteEngine On
-RewriteCond %{REQUEST_URI} ^/$
-RewriteRule (.*) /js-canvas-draw [R=301,L]
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^dessin.milan-forrat.com
+RewriteCond %{REQUEST_URI} !^/js-canvas-draw
+RewriteRule ^(.*)$ /js-canvas-draw/
