--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^dessin.milan-forrat.com
-RewriteCond %{REQUEST_URI} !^/js-canvas-draw
-RewriteRule ^(.*)$ /js-canvas-draw/
+RewriteEngine On
+
+## www -> no-www
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ 
+RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE,QSA]
+
+## http -> https
+RewriteCond %{HTTPS} off
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
